# zqsdev.com

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  netlify.toml
scripts/: build_rag.py  bump_version.py  inspect_rag.py  live_smoke_test.py  minify_css.py  run_live_autotest.sh  serve.py  test_build_rag.py  version_check.py
server/: Cargo.toml  build.rs
server/src/: main.rs  rag.rs  rate_limit.rs  static_data.rs
src/: ai.rs  build_info.rs  commands.rs  input.rs  keyword_icons.rs  lib.rs  markdown.rs  renderer.rs  state.rs  telemetry.rs  terminal.rs  utils.rs
static/: build_id.js  index.html  main.js  netlify.toml  style.css  style.min.css
static/calendly/: index.html
static/cv/: app.js  classic-viewer.js  classic.css  index.html  styles.css  viewer.js
static/cv/devops/: index.html
static/cv/founding/: index.html
static/cv/software/: index.html
static/data/: education.json  experience.json  faq.json  profile.json  projects.json  skills.json  testimonials.json
static/pkg/: README.md  package.json  zqs_terminal.d.ts  zqs_terminal.js  zqs_terminal_bg.wasm  zqs_terminal_bg.wasm.d.ts
