[workspace]
members = ["server"]

[workspace.package]
version = "0.1.25"
edition = "2021"

[package]
name = "zqs_terminal"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlDocument",
    "Window",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlSpanElement",
    "HtmlImageElement",
    "DomTokenList",
    "NodeList",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "ClipboardEvent",
    "CompositionEvent",
    "DataTransfer",
    "InputEvent",
    "Event",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Location",
    "console",
    "DocumentFragment",
    "Text",
]
