[package]
name = "zqs_terminal_server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rusqlite = "0.5"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
